deploy/blur-k8s-manifests.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blur-detection-depl
spec:
  selector:
    matchLabels:
      app: blur-detection-webapp
  replicas: 2
  template:
    metadata:
      labels:
        app: blur-detection-webapp
    spec:
      containers:
      - name: blur-detection-webapp
        image: ghcr.io/uzziell/blurrr:1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 3
      imagePullSecrets: 
      - name: ghcr-pat-r

---
apiVersion: v1
kind: Service
metadata:
  name: blur-detection-svc
spec:
  selector:
    app: blur-detection-webapp
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blur-detection-ingress
  labels:
    name: blur-detection-ingress
spec:
  rules:
  - host: blurrr.kube
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: blur-detection-svc
            port: 
              number: 80
